--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "buttons.games.sounds.bloodpressure"
+        applicationId "bp.diabetes.fingerscan.game.prank.bloodsugar.test"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
